ontol/ontol-compiler/test-cases/error/known_bugs/feature_request_readonly.on
def foo (
    rel. 'id': (rel* is: text)

    // this is just a suggestion, but I think the `|` operator makes sense here
    rel* 'readonly'|readonly: text // ERROR parse error: expected `:`, found `|`
)
